fix(Segmented Control): fixed label truncate issue

--- a/src/components/atoms/SegmentedControl/SegmentedControl.scss
+++ b/src/components/atoms/SegmentedControl/SegmentedControl.scss
@@ -4,6 +4,7 @@
     display: inline-flex;
     flex-direction: column;
     gap: var(--guit-ref-spacing-3xsmall);
+    max-width: 100%;
 
     &__wrapper {
         display: flex;
